# liana

./: .gitignore  LICENSE  README.md  create_knowledge_graph.py  docker-compose.yml  pyproject.toml
adapters/: uniprot_liana.py
config/: biocypher_config.yaml  biocypher_docker_config.yaml  schema_config.yaml
data/: ligands_curated.csv  receptors_curated.csv
